src/objects/Int_Agreement_Line__c.object
<CustomObject>
    <description>Int Agreement Line</description>
    <fields>
        <fullName>Agreement_Line_Maturity_Date__c</fullName>
        <description>Agreement Line Maturity Date</description>
        <label>Agreement Line Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Number__c</fullName>
        <description>Agreement Line Number</description>
        <label>Agreement Line Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Start_Date__c</fullName>
        <description>Agreement Line Start Date</description>
        <label>Agreement Line Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Status_Code__c</fullName>
        <description>Agreement Line Status Code</description>
        <label>Agreement Line Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreement Lines</relationshipLabel>
        <relationshipName>Int_Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Costs_Amount__c</fullName>
        <description>Hard Costs Amount</description>
        <label>Hard Costs Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Amount__c</fullName>
        <description>Net Principal Amount</description>
        <label>Net Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Balance_Amount__c</fullName>
        <description>Net Principal Balance Amount</description>
        <label>Net Principal Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Residual_Value__c</fullName>
        <description>Net Residual Value</description>
        <label>Net Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Type_Code__c</fullName>
        <description>Purchase Type Code</description>
        <label>Purchase Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Value_Booked__c</fullName>
        <description>Residual Value Booked</description>
        <label>Residual Value Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Soft_Costs_Amount__c</fullName>
        <description>Soft Costs Amount</description>
        <label>Soft Costs Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Int Agreement Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Net_Principal_Amount__c</columns>
        <columns>Hard_Costs_Amount__c</columns>
        <columns>Soft_Costs_Amount__c</columns>
        <columns>Residual_Value_Booked__c</columns>
        <columns>Net_Residual_Value__c</columns>
        <columns>Net_Principal_Balance_Amount__c</columns>
        <columns>Purchase_Type_Code__c</columns>
        <columns>Agreement_Line_Maturity_Date__c</columns>
        <columns>Agreement_Line_Number__c</columns>
        <columns>Agreement_Line_Start_Date__c</columns>
        <columns>Agreement_Line_Status_Code__c</columns>
        <columns>Agreement_Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALI-{0000000000}</displayFormat>
        <label>Agreement Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>